--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-asgiref==3.5.2
-beautifulsoup4==4.11.1
-bs4==0.0.1
-certifi==2022.6.15
-charset-normalizer==2.1.0
-dj-database-url==1.0.0
-Django==4.1
-django-crispy-forms==1.14.0
-djangorestframework==3.13.1
-gunicorn==20.1.0
-idna==3.3
-lxml==4.9.1
-psycopg2-binary==2.9.3
-pytz==2022.1
-requests==2.28.1
-soupsieve==2.3.2.post1
-sqlparse==0.4.2
-urllib3==1.26.11
-whitenoise==6.2.0
+asgiref>=3.5.2
+beautifulsoup4>=4.11.1
+bs4>=0.0.1
+certifi>=2022.6.15
+charset-normalizer>=2.1.0
+dj-database-url>=1.0.0
+Django>=4.1
+django-crispy-forms>=1.14.0
+djangorestframework>=3.13.1
+gunicorn>=20.1.0
+idna>=3.3
+lxml>=4.9.1
+psycopg2-binary>=2.9.3
+pytz>=2022.1
+requests>=2.28.1
+soupsieve>=2.3.2.post1
+sqlparse>=0.4.2
+urllib3>=1.26.11
+whitenoise>=6.2.0
 git+https://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@github.com/faaizajaz/libgen-download.git@master
