--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ django-crispy-forms==1.14.0
 djangorestframework==3.13.1
 gunicorn==20.1.0
 idna==3.3
-lxml==4.9.1
+lxml
 psycopg2-binary==2.9.3
 pytz==2022.1
 requests==2.31.0
